[gd_scene load_steps=14 format=3 uid="uid://cn2qyrv6nlm14"]

[ext_resource type="Texture2D" uid="uid://4n7lm0nhmyrh" path="res://lib/story_panel/textures/base.png" id="1_08h36"]
[ext_resource type="Script" path="res://lib/story_panel/story_panel.gd" id="1_b7ku0"]
[ext_resource type="Shader" path="res://lib/main_menu/title_card/shaders/shader_logo.gdshader" id="2_krwrs"]
[ext_resource type="Texture2D" uid="uid://n0dr8y0nclty" path="res://lib/dragger/materials/textures/paint_mask.png" id="3_5bs7w"]
[ext_resource type="Texture2D" uid="uid://cobebuy8rmele" path="res://lib/ui_container/textures/close_button.png" id="3_rw3lo"]
[ext_resource type="Texture2D" uid="uid://o8pey70yoybj" path="res://lib/ui_container/textures/close_button_hover.png" id="4_7s6xp"]
[ext_resource type="Texture2D" uid="uid://b8cyyq1t034dk" path="res://generic/textures/stickers/sticker_placeholder.png" id="5_0s6ph"]
[ext_resource type="Texture2D" uid="uid://c0wnqslsanjs2" path="res://lib/story_panel/textures/jade_wings.png" id="7_p10w8"]
[ext_resource type="AudioStream" uid="uid://bhncweunv2c4h" path="res://lib/ui_container/sounds/paper.ogg" id="8_e0q63"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ysri0"]
shader = ExtResource("2_krwrs")
shader_parameter/paint_mask_exponent = 0.01
shader_parameter/value = 0.0
shader_parameter/mask_scale = 1.0
shader_parameter/paint_mask_texture = ExtResource("3_5bs7w")

[sub_resource type="Animation" id="Animation_sptak"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JadeWings:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("JadeWings:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_v7lo3"]
resource_name = "float"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JadeWings:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("JadeWings:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuv2v"]
_data = {
"RESET": SubResource("Animation_sptak"),
"float": SubResource("Animation_v7lo3")
}

[node name="StoryPanel" type="CanvasLayer"]
script = ExtResource("1_b7ku0")

[node name="Base" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ysri0")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.0
offset_top = -356.0
offset_right = 466.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_08h36")
expand_mode = 1
stretch_mode = 5

[node name="Content" type="Control" parent="Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Base/Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.5
offset_top = -98.0
offset_right = 175.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "[center]1. A Helping Hand[/center]"

[node name="Description" type="RichTextLabel" parent="Base/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 284.0
offset_top = 280.0
offset_right = -282.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.75, 0.75, 0.75, 1)
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Lorem ipsum"
scroll_active = false

[node name="Done" type="Button" parent="Base/Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -83.0
offset_right = 68.5
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
text = "Done"

[node name="Sticker" type="TextureRect" parent="Base/Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.5
offset_top = 30.0
offset_right = 101.5
offset_bottom = 196.0
grow_horizontal = 2
texture = ExtResource("5_0s6ph")
expand_mode = 1
stretch_mode = 5

[node name="JadeWingsBase" type="Node2D" parent="."]

[node name="JadeWings" type="Sprite2D" parent="JadeWingsBase"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_p10w8")

[node name="JadeAnim" type="AnimationPlayer" parent="JadeWingsBase"]
libraries = {
"": SubResource("AnimationLibrary_tuv2v")
}

[node name="CloseButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(20, 20)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = -184.0
offset_right = 197.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture_normal = ExtResource("3_rw3lo")
texture_hover = ExtResource("4_7s6xp")
ignore_texture_size = true
stretch_mode = 0

[node name="Paper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e0q63")

[connection signal="button_down" from="Base/Content/Done" to="." method="close"]
[connection signal="button_down" from="CloseButton" to="." method="close"]
